@@ -4,9 +4,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.*;
 
 import jakarta.annotation.PreDestroy;
 
@@ -19,8 +17,17 @@ public class AuditAsyncConfig {
     @Value("${packetmanager.fetch.thread.pool.size:40}")
     private int fetchPoolSize;
 
+    @Value("${packetmanager.fetch.queue.capacity:200}")
+    private int fetchQueueCapacity;
+
+    @Value("${packetmanager.audit.thread.queue.capacity:50}")
+    private int auditQueueCapacity;
+
     @Value("${packetmanager.validate.thread.pool.size:30}")
     private int validatePoolSize;
+
+    @Value("${packetmanager.validate.queue.capacity:150}")
+    private int validateQueueCapacity;
 
     private ExecutorService auditPool;
     private ExecutorService fetchPool;
@@ -33,41 +40,56 @@ public class AuditAsyncConfig {
      */
     @Bean(name = "auditTaskExecutor")
     public ExecutorService auditTaskExecutor() {
-        auditPool = Executors.newFixedThreadPool(auditPoolSize,
-                Thread.ofPlatform().name("audit-", 0).factory());
-        //auditPool = Executors.newFixedThreadPool(auditPoolSize,
-          //      Thread.ofPlatform().name("audit-", 0).daemon(true).factory());
+        auditPool = new ThreadPoolExecutor(
+                auditPoolSize,
+                fetchPoolSize,
+                0L, TimeUnit.MILLISECONDS,
+                new LinkedBlockingQueue<>(auditQueueCapacity),
+                Thread.ofPlatform().name("pkt-audit-", 0).factory(),
+                new ThreadPoolExecutor.CallerRunsPolicy());
         return auditPool;
     }
 
     /**
-     * Fixed platform-thread pool for parallel sub-packet S3 fetches.
-     * NON-daemon threads: active packet downloads must complete before pod
-     * shuts down, otherwise in-flight requests fail mid-stream.
-     * Graceful shutdown (30s wait) in @PreDestroy ensures in-progress
-     * S3 downloads finish before the JVM exits.
+     * Bounded platform-thread pool for parallel sub-packet S3 fetches (reads).
+     * CallerRunsPolicy: when the queue is full the HTTP thread executes the task itself,
+     * providing natural backpressure — no Tomcat thread blocks waiting for a permit,
+     * and the queue never grows unbounded.
      *
-     * Replaces virtual-thread-per-task executor to avoid:
-     *  - Carrier thread pinning from AWS SDK v1 synchronized blocks
-     *  - Carrier thread accumulation (up to maxPoolSize) over hours
-     *  - ThreadLocal memory leaks per virtual thread in AWS/Jedis/Spring libs
+     * Tune via:
+     *   packetmanager.fetch.thread.pool.size    (default 40)  — concurrent S3 fetches
+     *   packetmanager.fetch.queue.capacity      (default 200) — max queued tasks before CallerRuns kicks in
      */
     @Bean(name = "packetFetchExecutor")
     public ExecutorService packetFetchExecutor() {
-        fetchPool = Executors.newFixedThreadPool(fetchPoolSize,
-                Thread.ofPlatform().name("pkt-fetch-", 0).factory());
+        fetchPool = new ThreadPoolExecutor(
+                fetchPoolSize,
+                fetchPoolSize,
+                0L, TimeUnit.MILLISECONDS,
+                new ArrayBlockingQueue<>(fetchQueueCapacity),
+                Thread.ofPlatform().name("pkt-fetch-", 0).factory(),
+                new ThreadPoolExecutor.CallerRunsPolicy());
         return fetchPool;
     }
 
     /**
-     * Fixed platform-thread pool for parallel sub-packet S3 fetches during validation.
-     * Separate from packetFetchExecutor so validate concurrency can be tuned independently
-     * without affecting read operations.
+     * Bounded platform-thread pool for parallel sub-packet S3 fetches during validation.
+     * Separate from packetFetchExecutor so validate concurrency can be tuned independently.
+     * CallerRunsPolicy provides backpressure when the queue is full.
+     *
+     * Tune via:
+     *   packetmanager.validate.thread.pool.size  (default 30)  — concurrent validate fetches
+     *   packetmanager.validate.queue.capacity    (default 150) — max queued tasks before CallerRuns kicks in
      */
     @Bean(name = "packetValidateExecutor")
     public ExecutorService packetValidateExecutor() {
-        validatePool = Executors.newFixedThreadPool(validatePoolSize,
-                Thread.ofPlatform().name("pkt-validate-", 0).factory());
+        validatePool = new ThreadPoolExecutor(
+                validatePoolSize,
+                validatePoolSize,
+                0L, TimeUnit.MILLISECONDS,
+                new ArrayBlockingQueue<>(validateQueueCapacity),
+                Thread.ofPlatform().name("pkt-validate-", 0).factory(),
+                new ThreadPoolExecutor.CallerRunsPolicy());
         return validatePool;
     }
 
